syntax = "proto3";

option go_package = "github.com/Alieksieiev0/feed-service/api/proto";

service UserService {
    rpc GetByUsername(UsernameRequest) returns (UserResponse) {};
    rpc Save(UserRequest) returns (SaveResponse) {};

}

message UsernameRequest {
    string username = 1;
}

message UserResponse {
    string id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
}

message UserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message SaveResponse {}
